add properties to the car object-v2

--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
                         <input type="text" class="form-control" id="model"required>
 
                     </div>
+                    <div class="mb-3">
+
+                        <label for="color" class="form-label"required>Color</label>
+                        <input type="text" class="form-control" id="color"required>
+
+                    </div>
+                    <div class="mb-3">
+
+                        <label for="year" class="form-label"required>Year</label>
+                        <input type="text" class="form-control" id="year"required>
+
+                    </div>
+                    <div class="mb-3">
+
+                        <label for="price" class="form-label"required>Price</label>
+                        <input type="text" class="form-control" id="price"required>
+
+                    </div>
                     <button  id="btn-form"type="submit"onsubmit="event.preventDefault(),    " class="btn btn-primary">Enviar</button>
                     
 
